[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://sounds/wood_footstep_1.wav" type="AudioStream" id=2]
[ext_resource path="res://textures/WoodFloor041_2K_Normal.png" type="Texture" id=3]
[ext_resource path="res://textures/WoodFloor041_2K_AmbientOcclusion.png" type="Texture" id=4]
[ext_resource path="res://textures/WoodFloor041_2K_Color.png" type="Texture" id=5]
[ext_resource path="res://textures/WoodFloor041_2K_Roughness.png" type="Texture" id=6]
[ext_resource path="res://sounds/wood_footstep_2.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/wood_footstep_5.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/wood_footstep_3.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/wood_footstep_6.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/wood_footstep_4.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/flashlight_switch_1.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/flashlight_switch_2.wav" type="AudioStream" id=13]
[ext_resource path="res://Menu.gd" type="Script" id=14]
[ext_resource path="res://SliderValue.gd" type="Script" id=15]
[ext_resource path="res://SFXPlayer.gd" type="Script" id=16]
[ext_resource path="res://PlayerController.gd" type="Script" id=20]
[ext_resource path="res://sounds/flashlight_switch_3.wav" type="AudioStream" id=21]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 1.25

[sub_resource type="BoxShape" id=2]
extents = Vector3( 64, 1, 64 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 5 )
roughness_texture = ExtResource( 6 )
normal_enabled = true
normal_scale = 6.0
normal_texture = ExtResource( 3 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 4 )
ao_on_uv2 = false
ao_texture_channel = 0
uv1_scale = Vector3( 32, 32, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 128, 2, 128 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 6, 3, 0.25 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 5 )
roughness_texture = ExtResource( 6 )
normal_enabled = true
normal_scale = 4.0
normal_texture = ExtResource( 3 )
uv1_scale = Vector3( 2, 1, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 12, 6, 0.5 )

[node name="Game" type="Spatial"]

[node name="Scene" type="CanvasLayer" parent="."]
layer = 0

[node name="Sun" type="DirectionalLight" parent="Scene"]
transform = Transform( -1.62921e-07, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 1.15203e-07, -1.15203e-07, 0, 4, 0 )
shadow_enabled = true

[node name="Player" type="RigidBody" parent="Scene"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.875, 0 )
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Controller" type="Spatial" parent="Scene/Player"]
script = ExtResource( 20 )

[node name="Collider" type="CollisionShape" parent="Scene/Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="Scene/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0 )

[node name="Camera" type="Camera" parent="Scene/Player/Head"]
keep_aspect = 0
fov = 85.0

[node name="Hand" type="Spatial" parent="Scene/Player"]

[node name="Spotlight" type="SpotLight" parent="Scene/Player/Hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0 )
shadow_enabled = true
spot_range = 32.0
spot_angle = 16.0

[node name="Flashlight_Switch_1" type="AudioStreamPlayer3D" parent="Scene/Player/Hand/Spotlight"]
stream = ExtResource( 12 )

[node name="Flashlight_Switch_2" type="AudioStreamPlayer3D" parent="Scene/Player/Hand/Spotlight"]
stream = ExtResource( 13 )

[node name="Flashlight_Switch_3" type="AudioStreamPlayer3D" parent="Scene/Player/Hand/Spotlight"]
stream = ExtResource( 21 )

[node name="Lamp" type="OmniLight" parent="Scene/Player"]
light_energy = 0.15

[node name="SFX" type="Spatial" parent="Scene/Player"]
script = ExtResource( 16 )

[node name="Footstep" type="Spatial" parent="Scene/Player/SFX"]
script = ExtResource( 16 )

[node name="Footstep_1" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 2 )

[node name="Footstep_2" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 7 )

[node name="Footstep_3" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 9 )

[node name="Footstep_4" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 11 )

[node name="Footstep_5" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 8 )

[node name="Footstep_6" type="AudioStreamPlayer3D" parent="Scene/Player/SFX/Footstep"]
stream = ExtResource( 10 )

[node name="Floor" type="StaticBody" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Scene/Floor"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Scene/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0101175, -0.0677204, 0.0459929 )
mesh = SubResource( 4 )
material/0 = null

[node name="Wall_1" type="StaticBody" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 6 )

[node name="CollisionShape" type="CollisionShape" parent="Scene/Wall_1"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Scene/Wall_1"]
mesh = SubResource( 7 )
material/0 = null

[node name="Wall_2" type="StaticBody" parent="Scene"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 6, 2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Scene/Wall_2"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Scene/Wall_2"]
mesh = SubResource( 7 )
material/0 = null

[node name="Wall_3" type="StaticBody" parent="Scene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -6 )

[node name="CollisionShape" type="CollisionShape" parent="Scene/Wall_3"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Scene/Wall_3"]
mesh = SubResource( 7 )
material/0 = null

[node name="Wall_4" type="StaticBody" parent="Scene"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -6, 2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Scene/Wall_4"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Scene/Wall_4"]
mesh = SubResource( 7 )
material/0 = null

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GUI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 129.451
margin_top = 31.6712
margin_right = -126.549
margin_bottom = -32.3287
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseSensitivity" type="VBoxContainer" parent="GUI/Menu/VBoxContainer"]
margin_right = 768.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="GUI/Menu/VBoxContainer/MouseSensitivity"]
margin_right = 768.0
margin_bottom = 14.0
text = "Mouse Sensitivity"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Menu/VBoxContainer/MouseSensitivity"]
margin_top = 18.0
margin_right = 768.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLabel" type="Label" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_top = 1.0
margin_right = 12.0
margin_bottom = 15.0
text = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 16.0
margin_right = 272.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 0.05
max_value = 2.0
step = 0.05
value = 0.5

[node name="XValue" type="Label" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 276.0
margin_top = 1.0
margin_right = 296.0
margin_bottom = 15.0
text = "0.5"
script = ExtResource( 15 )

[node name="VSeparator" type="VSeparator" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 300.0
margin_right = 304.0
margin_bottom = 16.0

[node name="YLabel" type="Label" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 308.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 15.0
text = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 323.0
margin_right = 579.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 0.05
max_value = 2.0
step = 0.05
value = 0.5

[node name="YValue" type="Label" parent="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer"]
margin_left = 583.0
margin_top = 1.0
margin_right = 603.0
margin_bottom = 15.0
text = "0.5"
script = ExtResource( 15 )

[node name="Head Acceleration" type="VBoxContainer" parent="GUI/Menu/VBoxContainer"]
margin_top = 38.0
margin_right = 768.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="GUI/Menu/VBoxContainer/Head Acceleration"]
margin_right = 768.0
margin_bottom = 14.0
text = "Head Acceleration"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Menu/VBoxContainer/Head Acceleration"]
margin_top = 18.0
margin_right = 768.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLabel" type="Label" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_top = 1.0
margin_right = 12.0
margin_bottom = 15.0
text = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 16.0
margin_right = 272.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 25.0
value = 14.0

[node name="XValue" type="Label" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 276.0
margin_top = 1.0
margin_right = 292.0
margin_bottom = 15.0
text = "14"
script = ExtResource( 15 )

[node name="VSeparator" type="VSeparator" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 296.0
margin_right = 300.0
margin_bottom = 16.0

[node name="YLabel" type="Label" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 304.0
margin_top = 1.0
margin_right = 315.0
margin_bottom = 15.0
text = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 319.0
margin_right = 575.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 25.0
value = 14.0

[node name="YValue" type="Label" parent="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer"]
margin_left = 579.0
margin_top = 1.0
margin_right = 595.0
margin_bottom = 15.0
text = "14"
script = ExtResource( 15 )

[node name="Hand Acceleration" type="VBoxContainer" parent="GUI/Menu/VBoxContainer"]
margin_top = 76.0
margin_right = 768.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="GUI/Menu/VBoxContainer/Hand Acceleration"]
margin_right = 768.0
margin_bottom = 14.0
text = "Hand Acceleration"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Menu/VBoxContainer/Hand Acceleration"]
margin_top = 18.0
margin_right = 768.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLabel" type="Label" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_top = 1.0
margin_right = 12.0
margin_bottom = 15.0
text = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 16.0
margin_right = 272.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 25.0
value = 7.0

[node name="XValue" type="Label" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 276.0
margin_top = 1.0
margin_right = 284.0
margin_bottom = 15.0
text = "7"
script = ExtResource( 15 )

[node name="VSeparator" type="VSeparator" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 288.0
margin_right = 292.0
margin_bottom = 16.0

[node name="YLabel" type="Label" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 296.0
margin_top = 1.0
margin_right = 307.0
margin_bottom = 15.0
text = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSlider" type="HSlider" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 311.0
margin_right = 567.0
margin_bottom = 16.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 1
min_value = 1.0
max_value = 25.0
value = 7.0

[node name="YValue" type="Label" parent="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer"]
margin_left = 571.0
margin_top = 1.0
margin_right = 579.0
margin_bottom = 15.0
text = "7"
script = ExtResource( 15 )
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/XSlider" to="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/XValue" method="_on_slider_value_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/XSlider" to="Scene/Player/Controller" method="_on_mouse_sensitivity_x_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/YSlider" to="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/YValue" method="_on_slider_value_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/MouseSensitivity/HBoxContainer/YSlider" to="Scene/Player/Controller" method="_on_mouse_sensitivity_y_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/XSlider" to="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/XValue" method="_on_slider_value_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/XSlider" to="Scene/Player" method="_on_head_acceleration_x_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/YSlider" to="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/YValue" method="_on_slider_value_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Head Acceleration/HBoxContainer/YSlider" to="Scene/Player" method="_on_head_acceleration_y_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/XSlider" to="Scene/Player" method="_on_hand_acceleration_x_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/XSlider" to="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/XValue" method="_on_slider_value_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/YSlider" to="Scene/Player" method="_on_hand_acceleration_y_changed"]
[connection signal="value_changed" from="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/YSlider" to="GUI/Menu/VBoxContainer/Hand Acceleration/HBoxContainer/YValue" method="_on_slider_value_changed"]
